CMAKE_MINIMUM_REQUIRED(VERSION 3.25)

PROJECT(playground)

SET(CMAKE_C_STANDARD 11)
# SET(CMAKE_C_COMPILER clang)
SET(CMAKE_C_STANDARD_REQUIRED ON)

SET(CMAKE_CXX_STANDARD 17)
# SET(CMAKE_CXX_COMPILER clang++)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

INCLUDE(cmake/sanitize.cmake)

ADD_SUBDIRECTORY(src)
