SET(CONTRIB_SOURCE_DIR "${WORKSPACE_ROOT_DIR}/contrib")

ADD_SUBDIRECTORY(openssl)

SET(OPENSSL_ROOT_DIR ${WORKSPACE_INSTALL_DIR})
SET(OPENSSL_USE_STATIC_LIBS True)
FIND_PACKAGE(OpenSSL REQUIRED)

MESSAGE(OPENSSL_FOUND: ${OPENSSL_FOUND})
MESSAGE(OPENSSL_VERSION: ${OPENSSL_VERSION})
MESSAGE(OPENSSL_INCLUDE_DIR: ${OPENSSL_INCLUDE_DIR})
MESSAGE(OPENSSL_SSL_LIBRARY: ${OPENSSL_SSL_LIBRARY})
MESSAGE(OPENSSL_CRYPTO_LIBRARY: ${OPENSSL_CRYPTO_LIBRARY})

# FIND_PACKAGE(Krb5 REQUIRED)

ADD_SUBDIRECTORY(krb5)
ADD_SUBDIRECTORY(libgsasl)
ADD_SUBDIRECTORY(libhdfs3)
