SET(SRC_DIR ${CONTRIB_SOURCE_DIR}/libxml2)

IF(NOT EXISTS ${WORKSPACE_INSTALL_DIR}/include/libxml2/libxml/xmlversion.h OR FORCE_INSTALL_LIBXML2)
EXECUTE_PROCESS(
    WORKING_DIRECTORY ${SRC_DIR}
    COMMAND_ECHO STDOUT
    COMMAND ${SRC_DIR}/autogen.sh
    COMMAND ${SRC_DIR}/configure --prefix=${WORKSPACE_INSTALL_DIR} --enable-static --disable-shared
    COMMAND make
    COMMAND make install
)
ENDIF()

FIND_PACKAGE(LibXml2 REQUIRED GLOBAL)
