SET(SRC_DIR ${CONTRIB_SOURCE_DIR}/openssl)

IF(NOT EXISTS ${WORKSPACE_INSTALL_DIR}/include/openssl/ssl.h OR FORCE_INSTALL_OPENSSL)
EXECUTE_PROCESS(
    WORKING_DIRECTORY ${SRC_DIR}
    COMMAND_ECHO STDOUT
    COMMAND ${SRC_DIR}/Configure --prefix=${WORKSPACE_INSTALL_DIR} --openssldir=${WORKSPACE_INSTALL_DIR}/ssl
    COMMAND make
    COMMAND make install
)
ENDIF()

SET(OPENSSL_ROOT_DIR ${WORKSPACE_INSTALL_DIR})
SET(OPENSSL_USE_STATIC_LIBS True)
FIND_PACKAGE(OpenSSL REQUIRED GLOBAL)

MESSAGE(OPENSSL_FOUND: ${OPENSSL_FOUND})
MESSAGE(OPENSSL_VERSION: ${OPENSSL_VERSION})
MESSAGE(OPENSSL_INCLUDE_DIR: ${OPENSSL_INCLUDE_DIR})
MESSAGE(OPENSSL_SSL_LIBRARY: ${OPENSSL_SSL_LIBRARY})
MESSAGE(OPENSSL_CRYPTO_LIBRARY: ${OPENSSL_CRYPTO_LIBRARY})
